Hero Section (in progress)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-
+    <main>
+        <div id="hero">
+            <h1>Change<br>the Course</h1>
+            <div id="video-container">
+                <div id="play">PLAY</div>
+                <video autoplay loop muted src="assets/video.mp4"></video>
+            </div>
+        </div>
+    </main>
     <script src="script/script.js"></script>
 </body>
 
